<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <View
            android:id="@+id/view01"
            android:layout_width="wrap_content"
            android:background="@drawable/separation_settings"
            android:layout_height="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout2"/>

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickImageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layoutDirection="rtl"
            android:onClick="onClickSwitch"
            app:layout_constraintEnd_toEndOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/switch1"
            app:layout_constraintEnd_toStartOf="@+id/switch1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/switch1" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/switch1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/switch1"
            app:layout_constraintTop_toTopOf="@+id/switch1" />
        <View
            android:id="@+id/view02"
            android:layout_width="wrap_content"
            android:background="@drawable/separation"
            android:layout_height="10dp"
            app:layout_constraintTop_toBottomOf="@+id/switch1"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        tools:ignore="MissingConstraints">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17">

            <RadioButton
                android:id="@+id/radio_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/english"
                android:checked="true"
                android:onClick="onClickRadioButton"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_ru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/russian"
                android:onClick="onClickRadioButton"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_uk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/ukrain"
                android:onClick="onClickRadioButton"
                android:textSize="20sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/view03"
            android:layout_width="wrap_content"
            android:background="@drawable/separation_settings"
            android:layout_height="10dp"
            app:layout_constraintTop_toBottomOf="@+id/radio_group"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout4"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>